Use jbuilder alternative-deps for backend impl

--- a/livereload.opam
+++ b/livereload.opam
@@ -7,10 +7,7 @@ homepage: ""
 bug-reports: ""
 license: ""
 dev-repo: ""
-build: [
-  ["./configure"]
-  ["jbuilder" "build" "-p" name "-j" jobs]
-]
+build: [["jbuilder" "build" "-p" name "-j" jobs]]
 depends: [
   "jbuilder" {build}
   "containers"
