Add os deps to livereload-tests package

--- a/livereload-tests.opam
+++ b/livereload-tests.opam
@@ -4,4 +4,6 @@ depends: [
   "jbuilder" {build}
   "livereload"
   "opium" {test}
+  "inotify" { os = "linux" }
+  "osx-fsevents" { os = "macos" }
 ]
