Authors not author

--- a/livereload.opam
+++ b/livereload.opam
@@ -2,7 +2,7 @@ opam-version: "2.0"
 name: "livereload"
 version: "0.1"
 maintainer: "Dave Aitken <dave.aitken@gmail.com>"
-author: "Dave Aitken <dave.aitken@gmail.com>"
+authors: "Dave Aitken <dave.aitken@gmail.com>"
 homepage: ""
 bug-reports: ""
 license: ""
